<resources>
    <string name="app_name">My Expenses</string>
    <string name="emailhint">email@dom.com</string>
    <string name="nome_hint">nome segundonome</string>
    <string name="btnTrocaSenha">Troca Senha</string>
    <string name="contentDescripFoto">A foto do usuario</string>
    <string name="perfil">Perfil</string>
    <string name="excluirConta">Excluir Conta</string>
    <string name="sair">Sair</string>
    <string name="settings">Configurações</string>
    <string name="nome">Nome: </string>
    <string name="senha">Senha: </string>
    <string name="email">Email: </string>
    <string name="salvar">Salvar</string>
    <string name="alterarPerfilActivity">:: Alterar Perfil</string>
    <string name="excluirContaActivity">:: Excluir Conta</string>
    <string name="desc_image_perfil">Foto do Usuário</string>
    <string name="mensagemExclusao">Ao confirmar a exclusão, todos os dados anteriormente salvos serão excluídos, assim como:
     \n- Histórico
     \n- Gráficos
     \n- Preferências"
     \n Este processo é IRREVERSÍVEL!
    </string>

    <string-array name="categoria_array">
        <item>Serviços</item>
        <item>Alimentação</item>
        <item>Saude</item>
        <item>Diversão</item>
    </string-array>
</resources>
